--- a/example.html
+++ b/example.html
@@ -30,8 +30,9 @@
 
 		<h1>Score: <span id="score">?</span></h1>
 
-		<script src="adapter.js"></script>
+		<script src="https://webrtc.github.io/adapter/adapter-1.0.7.js"></script>
 		<script src="diff-cam-engine.js"></script>
+
 		<script>
 			var video = document.getElementById('video');
 			var canvas = document.getElementById('motion');
